--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "element-plus": "^2.9.1",
-    "vue": "^3.5.13"
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
