--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "prettier": "prettier --write .",
-    "postinstall": "husky"
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -22,12 +21,7 @@
   "devDependencies": {
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "vite": "^6.0.3"
-  },
-  "lint-staged": {
-    "**/*.{js,vue,ts,json,css,scss,md}": "prettier --write"
   }
 }
