--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
     "prettier": "^3.4.2",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
     "vite": "^6.0.3"
   }
 }
