--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,3 +23,7 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 notify = "8.0.0"
+tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
+tokio-macros = { version = "2.5.0" }
+reqwest = { version = "0.12", features = ["json", "blocking"] }
+dotenv = "0.15"
