--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,5 @@ tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tokio-macros = { version = "2.5.0" }
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 dotenv = "0.15"
+sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
+dirs = "6.0"
