--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
 node_modules
 dist
 dist-ssr
 *.local
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,7 +20,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
 .env
 ai/*/respond.json
 src/views/Test.vue
+watcher/*.o
+watcher/*.exe
+watcher/*.db
+watcher/test/*
