--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tokio-macros = { version = "2.5.0" }
-reqwest = { version = "0.12", features = ["json", "blocking"] }
 sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
 dirs = "6.0"
+tauri-plugin-shell = "2.2.0"
+glob = "0.3"
