--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,3 +30,4 @@ tauri-plugin-shell = "2.2.0"
 glob = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
 async-recursion = "1.0"
+winapi = { version = "0.3", features = ["minwinbase", "fileapi"] }
