--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,3 +31,4 @@ glob = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
 async-recursion = "1.0"
 winapi = { version = "0.3", features = ["minwinbase", "fileapi"] }
+tauri-plugin-dialog = "2"
