--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-shell": "~2",
     "element-plus": "^2.9.1",
     "lodash": "^4.17.21",
     "pinia": "^2.3.0",
