--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,9 +26,10 @@ tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tokio-macros = { version = "2.5.0" }
 sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
 dirs = "6.0"
-tauri-plugin-shell = "2.2.0"
+tauri-plugin-shell = "2"
 glob = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
 async-recursion = "1.0"
 winapi = { version = "0.3", features = ["minwinbase", "fileapi"] }
 tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
