Feat: Add support for word and ppt files

--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -1,7 +1,10 @@
+altgraph==0.17.4
 annotated-types==0.7.0
+black==24.10.0
 cachetools==5.5.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+click==8.1.8
 google-ai-generativelanguage==0.6.10
 google-api-core==2.24.0
 google-api-python-client==2.157.0
@@ -13,17 +16,30 @@ grpcio==1.69.0
 grpcio-status==1.69.0
 httplib2==0.22.0
 idna==3.10
+lxml==5.3.1
+macholib==1.16.3
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+pillow==11.1.0
+platformdirs==4.3.6
 proto-plus==1.25.0
 protobuf==5.29.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.10.5
 pydantic_core==2.27.2
+pyinstaller==6.12.0
+pyinstaller-hooks-contrib==2025.1
 pyparsing==3.2.1
+python-docx==1.1.2
 python-dotenv==1.0.1
+python-pptx==1.0.2
 requests==2.32.3
 rsa==4.9
+setuptools==75.8.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
+XlsxWriter==3.2.2
