--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -5,6 +5,7 @@ cachetools==5.5.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+docopt==0.6.2
 google-ai-generativelanguage==0.6.10
 google-api-core==2.24.0
 google-api-python-client==2.157.0
@@ -22,6 +23,7 @@ mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
 pillow==11.1.0
+pipreqs==0.4.13
 platformdirs==4.3.6
 proto-plus==1.25.0
 protobuf==5.29.3
@@ -43,3 +45,4 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
 XlsxWriter==3.2.2
+yarg==0.1.10
